--- a/src/components/tables/details.css
+++ b/src/components/tables/details.css
@@ -1,41 +1,16 @@
-.details-container {
-    display: flex;
-    flex-direction: row;
+.button {
+    float: right;
+    background-color: #4051a3;
+    color: white;
+    border: none;
+    padding: 5px 13px
 }
 
-.details-card-wrapper {
-    display: flex;
-    flex-direction: row;
-    height: fit-content;
-}
+.button:hover {
+    background-color: #7E8DC6;
+    color: white;
+  }
 
-button {
-    margin-left: 10px;
-}
-
-.DetailsCard {
-    display: flex;
-    border: 1px solid darkgray;
-    font-size: .8rem;
-    width: 27vw;
-    margin: 10px;
-    padding: 5px 5px 0 5px;
-    flex-flow: column wrap;
-}
-
-.details-properties {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 8px;
-    
-}
 .details-properties > .title-property{
     overflow-wrap: anywhere;
-}
-.title-div {
-    font-weight: bold;
-    margin-right: 5px;
-    font-size: .7rem;
-    min-width: 70px;
-    max-width: 70px;
 }
