fixed back button spacing issue on details page

--- a/src/components/tables/details.css
+++ b/src/components/tables/details.css
@@ -3,7 +3,8 @@
     background-color: #4051a3;
     color: white;
     border: none;
-    padding: 5px 13px
+    padding: 5px 13px;
+    margin-top: 5px;
 }
 
 .button:hover {
