--- a/src/components/LoadingSpinner/loadingSpinner.css
+++ b/src/components/LoadingSpinner/loadingSpinner.css
@@ -7,10 +7,10 @@
     }
   }
   .loading-spinner {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border: 10px solid #f3f3f3; /* Light grey */
-    border-top: 10px solid #383636; /* Black */
+    border-top: 10px solid #4051a3; /* Blue */
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
   }
