--- a/src/components/tables/detailsNav.css
+++ b/src/components/tables/detailsNav.css
@@ -2,8 +2,23 @@
     display: flex;
     flex-direction: row;
     width: 75vw;
+    margin: 3px 0;
 }
 
 li {
     margin-right: 25px;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    border-right: 1px solid darkgray;
+    padding: 12px 15px;
+}
+
+button:hover, :focus{
+    background-color: rgb(199, 206, 215);
+}
+.details-navbar{
+    margin: 30px 0 0 50px;
 }
