--- a/src/components/tables/detailsNav.css
+++ b/src/components/tables/detailsNav.css
@@ -5,19 +5,16 @@
     margin: 3px 0;
 }
 
-li {
-    margin-right: 25px;
-}
-
-button {
+.details-nav-button {
     background-color: transparent;
     border: none;
     border-right: 1px solid darkgray;
     padding: 12px 15px;
 }
 
-button:hover, :focus{
+.details-nav-button:hover, :focus{
     background-color: rgb(199, 206, 215);
+    cursor: pointer;
 }
 .details-navbar{
     margin: 30px 0 0 50px;
