--- a/src/components/nav/navBar.css
+++ b/src/components/nav/navBar.css
@@ -39,13 +39,13 @@ li {
 }
 
 .nav-link:hover {
-background-color: #E7EEF0;
-cursor: pointer;
+    background-color: #E7EEF0;
+    cursor: pointer;
 }
 
-/* .nav-link:active {
-    background-color: #f5f6f6;
-} */
+.nav-link:active {
+    background-color: rgb(199, 206, 215);
+}
 
 
 
