--- a/src/components/tables/detailsNav.css
+++ b/src/components/tables/detailsNav.css
@@ -12,9 +12,13 @@
     padding: 12px 15px;
 }
 
-.details-nav-button:hover, :focus{
+.details-nav-button:hover:focus{
     background-color: rgb(199, 206, 215);
+}
+
+.details-nav-button {
     cursor: pointer;
+
 }
 .details-navbar{
     margin: 30px 0 0 50px;
