--- a/src/components/tables/codeableConcept.css
+++ b/src/components/tables/codeableConcept.css
@@ -8,15 +8,21 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    /* background-color: rgba(0, 0, 0, 0.2); */
   }
   .modal-content {
+    /* width: 50%;
+    height: 50%; */
+    position: absolute;
     background-color: white;
     border-radius: 5px;
-    padding: 10px;
-    position: relative;
+    padding: 6px;
+    /* position: relative; */
     max-height: 60vh;
     overflow-y: auto;
+    border: 2px solid #a5bec5;
+    /* transform: translate(-50%, -50%) */
+
   }
   
   .close {
