--- a/src/components/DataDictionaries/dataDictionary.css
+++ b/src/components/DataDictionaries/dataDictionary.css
@@ -7,7 +7,7 @@
   margin: 39px 0 0 15px;
 }
 
-.search-input-dd input {
+#search-input-dd input {
     width: 200px;
     height: 20px;
     margin: 0 0 50px 15px;
