--- a/src/components/tables/codeableConcept.css
+++ b/src/components/tables/codeableConcept.css
@@ -2,13 +2,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.2); */
+  }
+  .modalSpinner{
+    z-index: 1;
+
   }
   .modal-content {
     /* width: 50%;
