--- a/src/components/DataDictionaries/dataDictionaryReferences.css
+++ b/src/components/DataDictionaries/dataDictionaryReferences.css
@@ -30,8 +30,20 @@
     width: 75vw;
 }
 
+.table-head-DDR, .table-cell-DDR {
+  padding: 15px;
+  border: 1px solid lightgray;
+  font-size: .8rem;
+  border-left: transparent 1px solid;
+  border-right: transparent 1px solid;
+
+}
 .dd-header-title {
     text-align: center;
+    padding: 15px;
+    border: 1px lightgray solid;
+    border-left: 1px transparent solid;
+    border-right: 1px transparent solid;
 }
 
 .dd-variable-name {
