--- a/src/components/tables/detailsDataDictionary.css
+++ b/src/components/tables/detailsDataDictionary.css
@@ -12,9 +12,13 @@
 
 .DD-title-container {
     width: 21vw;
+}
+
+.DD-title-box {
     border: 1px solid darkgray;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
 }
 .DD-titles {
     font-size: .9rem;
@@ -35,5 +39,20 @@
     text-align: center;
     margin: 50px 0 0 0;
 }
+
+.button-details-DD {
+    float: left;
+    background-color: #4051a3;
+    color: white;
+    border: none;
+    width: fit-content;
+    padding: 5px 13px;
+    margin-top: 5px;
+}
+
+.button-details-DD:hover {
+    background-color: #7E8DC6;
+    color: white;
+  }
 
 
