--- a/src/components/VariableSummaries/variableSummary.css
+++ b/src/components/VariableSummaries/variableSummary.css
@@ -1,8 +1,7 @@
 .variable-summary-wrapper {
-  background-color: white;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .variable-summary-head {
@@ -17,6 +16,25 @@
   background-color: #eaf0e7;
   border: none;
   font-size: 0.8rem;
+}
+
+.variable-summary-head-codeable {
+  background-color: #eaf0e7;
+  border: none;
+  font-size: 0.8rem;
+}
+
+.variable-summary-head-cell-codeable {
+  padding: 5px 10px;
+}
+
+.variable-summary-cell-codeable {
+  margin: 0 10px 0 20px;
+}
+
+.variable-summary-table-codeable {
+  border-right: 1px lightgray solid;
+  border-bottom: 2px #f0e9e7 solid;
 }
 
 .variable-summary-table {
