--- a/src/components/tables/codeableConcept.css
+++ b/src/components/tables/codeableConcept.css
@@ -1,57 +1,55 @@
 .modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.2); */
-  }
-  .modalSpinner{
-    z-index: 1;
-
-  }
-  .modal-content {
-    /* width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.2); */
+}
+.modalSpinner {
+  z-index: 1;
+}
+.modal-content {
+  /* width: 50%;
     height: 50%; */
-    position: absolute;
-    background-color: white;
-    border-radius: 5px;
-    padding: 6px;
-    /* position: relative; */
-    max-height: 60vh;
-    overflow-y: auto;
-    border: 2px solid #a5bec5;
-    /* transform: translate(-50%, -50%) */
+  position: absolute;
+  background-color: white;
+  border-radius: 5px;
+  padding: 6px;
+  /* position: relative; */
+  max-height: 60vh;
+  overflow-y: auto;
+  border: 2px solid #a5bec5;
+  /* transform: translate(-50%, -50%) */
+}
 
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    /* border: 1px solid rgb(107, 113, 118);
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  /* border: 1px solid rgb(107, 113, 118);
     border-radius: 50%; */
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: rgb(107, 113, 118);
-    text-decoration: none;
-    cursor: pointer; 
-  }
+}
 
-  .codeable-concept-head {
-    padding: 10px 15px;
-    background-color: #E7EEF0;
-  }
+.close:hover,
+.close:focus {
+  color: rgb(107, 113, 118);
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  .codeable-concept-cell {
-    padding: 10px;
-  }
+.codeable-concept-head {
+  padding: 10px 15px;
+  background-color: #f2f2f2;
+}
+
+.codeable-concept-cell {
+  padding: 10px;
+}
