--- a/src/components/tables/dataDictionaryTableDetails/dataDictionaryTableDetails.css
+++ b/src/components/tables/dataDictionaryTableDetails/dataDictionaryTableDetails.css
@@ -6,7 +6,7 @@ table,
 th,
 td {
   text-align: left;
-  font-size: 0.85rem;
+  /* font-size: 0.85rem; */
 }
 
 table {
@@ -15,9 +15,9 @@ table {
 
 .table-header-DTD {
   padding: 1rem;
-  background-color: #e7eef0;
+  background-color: #f2f2f2;
   border: 1px solid lightgray;
-  font-size: 0.8rem;
+  /* font-size: 0.8rem; */
   border-left: transparent 1px solid;
   border-right: transparent 1px solid;
 }
@@ -27,7 +27,7 @@ table {
   padding: 0.5rem;
   /* padding: 15px; */
   border: 1px solid lightgray;
-  font-size: 0.8rem;
+  /* font-size: 0.8rem; */
   border-left: transparent 1px solid;
   border-right: transparent 1px solid;
 }
@@ -75,7 +75,7 @@ table {
 
 .sub-row--open {
   opacity: 1;
-  background-color: #e7eef0;
+  background-color: #f2f2f2;
 }
 
 .down-arrow {
