--- a/src/components/tables/details.css
+++ b/src/components/tables/details.css
@@ -1,30 +1,29 @@
 .button {
-    float: right;
-    background-color: #4051a3;
-    color: white;
-    border: none;
-    padding: 5px 13px;
-    margin-top: 5px;
+  float: right;
+  background-color: #035c94;
+  color: white;
+  border: none;
+  padding: 5px 13px;
+  margin-top: 5px;
 }
 
 .button:hover {
-    background-color: #7E8DC6;
-    color: white;
-  }
+  background-color: #7ebac0;
+  color: white;
+}
 
 .details-properties {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 8px;
-    
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 8px;
 }
-.details-properties > .title-property{
-    overflow-wrap: anywhere;
+.details-properties > .title-property {
+  overflow-wrap: anywhere;
 }
 .title-div {
-    font-weight: bold;
-    margin-right: 5px;
-    font-size: .7rem;
-    min-width: 70px;
-    max-width: 70px;
+  font-weight: bold;
+  margin-right: 5px;
+  /* font-size: 0.7rem; */
+  min-width: 70px;
+  max-width: 70px;
 }
