--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  color: rgb(36, 41, 46);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  padding: 0px;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Open Sans", sans-serif;
+  color: rgb(1, 40, 64);
+  font-weight: 400;
+}
+/* 
+h4 {
+  font-size: 16px;
+  line-height: 17.6px;
+  margin: 32px 0px 16px;
+  padding: 0px;
+} */
+
+/* h5 {
+  font-size: 13.9288px;
+  line-height: 15.3217px;
+  margin: 32px 0px 16px;
+  padding: 0px;
+} */
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
