--- a/src/components/DataDictionaries/dataDictionary.css
+++ b/src/components/DataDictionaries/dataDictionary.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 230px;
+  width: 280px;
 }
 
 .dd-nav-header {
@@ -16,7 +16,7 @@
 }
 
 .search-input-dd {
-  margin: 0 0 50px 15px;
+  margin: 10px 0 50px 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -29,7 +29,7 @@ input {
 
 .search-button {
   margin: 0 6px 0 0;
-  background-color: #4051a3;
+  background-color: #035c94;
   color: white;
   border: none;
   padding: 5px 13px;
@@ -38,7 +38,7 @@ input {
 
 .clear-button {
   margin: 0 6px 0 0;
-  background-color: #308dc7;
+  background-color: #035c94;
   color: white;
   border: none;
   padding: 5px 13px;
@@ -47,30 +47,31 @@ input {
 }
 
 .search-button:hover {
-  background-color: #7e8dc6;
+  background-color: #7ebac0;
   color: white;
 }
 
 .clear-button:hover {
-  background-color: #62a8d4;
+  background-color: #7ebac0;
   color: white;
 }
 
 .data-dictionary-table-head {
-  background-color: #e7eef0;
+  background-color: #f2f2f2;
+  font-size: 14px;
 }
 
 .table-head-DD,
 .table-cell-DD {
   padding: 15px;
   border: 1px solid lightgray;
-  font-size: 0.8rem;
+  font-size: 14px;
   border-left: transparent 1px solid;
   border-right: transparent 1px solid;
 }
 
 .DD-colored-row:nth-child(even) {
-  background-color: #e7eef0;
+  background-color: #f2f2f2;
 }
 
 .no-results {
