--- a/src/components/DataDictionaries/dataDictionary.css
+++ b/src/components/DataDictionaries/dataDictionary.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 230px;
+  width: 280px;
 }
 
 .dd-nav-header {
@@ -16,7 +16,7 @@
 }
 
 .search-input-dd {
-  margin: 0 0 50px 15px;
+  margin: 10px 0 50px 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -38,7 +38,7 @@ input {
 
 .clear-button {
   margin: 0 6px 0 0;
-  background-color: #308dc7;
+  background-color: #035c94;
   color: white;
   border: none;
   padding: 5px 13px;
@@ -58,13 +58,14 @@ input {
 
 .data-dictionary-table-head {
   background-color: #f2f2f2;
+  font-size: 14px;
 }
 
 .table-head-DD,
 .table-cell-DD {
   padding: 15px;
   border: 1px solid lightgray;
-  /* font-size: 0.8rem; */
+  font-size: 14px;
   border-left: transparent 1px solid;
   border-right: transparent 1px solid;
 }
