--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,25 @@ h5 {
   color: rgb(1, 40, 64);
   font-weight: 400;
 }
+
+h2 {
+  color: rgb(1, 40, 64);
+  font-size: 24.2515px;
+  font-weight: 400;
+  line-height: 30.3144px;
+  margin: 32px 0px 16px;
+  padding: 0px 0px 6px;
+}
+
+h3 {
+  color: rgb(1, 40, 64);
+  font-size: 21.1122px;
+  font-weight: 400;
+  line-height: 26.3902px;
+  margin: 32px 0px 16px;
+  padding: 0px;
+}
+
 /* 
 h4 {
   font-size: 16px;
