--- a/src/components/Auth/login.css
+++ b/src/components/Auth/login.css
@@ -5,7 +5,7 @@
 
 .anvil-logo {
   margin: 8vh 6vw 0;
-  width: 410px;
+  width: 26.7vw;
 }
 
 .left-side {
@@ -24,24 +24,24 @@
 }
 
 .login-gregor {
-  font-size: 28px;
-  line-height: 36px;
+  font-size: 1.85vw;
+  line-height: 2.35vw;
 }
 
 .login-button {
-  margin: 35px 0 135px;
+  margin: 4vh 0 16vh;
   cursor: pointer;
-  height: 60px;
+  height: 3.9vw;
 }
 
 .login-trouble {
-  font-size: 20px;
-  line-height: 26px;
+  font-size: 1.3vw;
+  line-height: 1.7vw;
   text-align: center;
 }
 
 .login-trouble-question {
-  margin: 0 0 30px 0;
+  margin: 0 0 4vh 0;
 }
 
 .login-link:link {
@@ -49,6 +49,6 @@
 }
 
 .anvil-small-logo {
-  width: 58px;
+  width: 3.8vw;
   margin: 4vh 0 1.5vh 0;
 }
