--- a/src/components/tables/graphs.css
+++ b/src/components/tables/graphs.css
@@ -52,6 +52,16 @@
   border: 1px solid darkgray;
 }
 
+.graph-sex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  padding: 5px;
+  font-size: 0.8rem;
+  margin: 9px;
+  overflow-wrap: break-word;
+}
+
 .graph-sex {
   display: flex;
   flex-direction: column;
