--- a/src/components/tables/graphs.css
+++ b/src/components/tables/graphs.css
@@ -62,6 +62,12 @@
   overflow-wrap: break-word;
 }
 
+.graph-display {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .graph-sex {
   display: flex;
   flex-direction: column;
